--- a/career.html
+++ b/career.html
@@ -198,343 +198,96 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 </script>
 
 
-
-
-
- 
-
-
-<!-- ======= Services Section ======= -->
-<section class="services-section">
-  <h1 class="heading">Our Services</h1>
-  <p>We offer a wide range of services to cater to your business and personal needs.</p>
-  <div class="services-container">
-    <!-- Web Development Card -->
-    <a href="web.html" class="card-link" style="margin-left: 5%;">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <script src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.3.0/dist/dotlottie-wc.js" type="module"></script>
-            <dotlottie-wc 
-              src="https://lottie.host/21cc4c31-010b-4897-8623-ff3d80f3c1ed/BHMusOn0EX.lottie" 
-              autoplay 
-              loop>
-            </dotlottie-wc>
-            <h2>Web Development</h2>
-            <p>Create responsive and modern websites for your business.</p>
-          </div>
-          <div class="card-back">
-            We build responsive, modern, and user-friendly websites tailored to your needs.
-          </div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Mobile Applications Card -->
-    <a href="mobile.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/63e62180-9d95-45d6-9dc8-829075273fda/IhxjzMFqU9.lottie" autoplay loop></dotlottie-wc>
-            <h2>Mobile Applications</h2>
-            <p>Design engaging mobile applications for all platforms.</p>
-          </div>
-          <div class="card-back">Custom mobile apps designed to enhance user engagement and performance.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Web Applications Card -->
-    <a href="web.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/48305ce6-c0d2-4985-b0a0-e7ed9776540e/hwe3R3JHcx.lottie" autoplay loop></dotlottie-wc>
-            <h2>Web Applications</h2>
-            <p>Develop secure and scalable web-based applications.</p>
-          </div>
-          <div class="card-back">Scalable and secure web apps for businesses of all sizes.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Educational Services Card -->
-    <a href="educational-services.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/14ba9948-87f7-484d-a709-e410d09ab86d/OZDP4mQ5x0.lottie" autoplay loop></dotlottie-wc>
-            <h2>Educational Services</h2>
-            <p>Provide innovative e-learning and educational solutions.</p>
-          </div>
-          <div class="card-back">Innovative solutions for e-learning and educational platforms.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- SEO Card -->
-    <a href="seo.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/c4a0b34b-dfa9-4253-a5e3-e74c61f690ac/rIOyAXUDzE.lottie" autoplay loop></dotlottie-wc>
-            <h2>SEO</h2>
-            <p>Boost your visibility with effective SEO strategies.</p>
-          </div>
-          <div class="card-back">Boost your online visibility with our expert SEO services.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Social Media Marketing Card -->
-    <a href="social-media-marketing.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/c894c6e1-0efc-4e08-bf18-7a1f820a8b0e/fRE6CE1fG3.lottie" autoplay loop></dotlottie-wc>
-            <h2>Social Media Marketing</h2>
-            <p>Enhance your reach with strategic social media campaigns.</p>
-          </div>
-          <div class="card-back">Expand your reach with strategic social media campaigns.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Salesforce Card -->
-    <a href="salesforce.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/7f05cfef-a731-41e3-97aa-5ca8b8fca009/fsvQpdiPHf.lottie" autoplay loop></dotlottie-wc>
-            <h2>Salesforce</h2>
-            <p>Streamline your business operations with Salesforce solutions.</p>
-          </div>
-          <div class="card-back">Tailored Salesforce services to enhance your CRM capabilities and business processes.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- Data Science Card -->
-    <a href="data-science.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/8a23c35a-1b26-47a1-98fb-27ac4b2fd4c0/MahVT4sTF0.lottie" autoplay loop></dotlottie-wc>
-            <h2>Data Science</h2>
-            <p>Transform your data into valuable insights with data science solutions.</p>
-          </div>
-          <div class="card-back">Leverage data analytics, machine learning, and AI to drive business growth.</div>
-        </div>
-      </div>
-    </a>
-
-    <!-- AI Card -->
-    <a href="ai.html" class="card-link">
-      <div class="card">
-        <div class="card-inner">
-          <div class="card-front">
-            <dotlottie-wc src="https://lottie.host/a31bb4bf-8c1b-4b42-b337-c36718a6c7e8/czNxHIBtCm.lottie" autoplay loop></dotlottie-wc>
-            <h2>AI</h2>
-            <p>Implement cutting-edge AI solutions for your business.</p>
-          </div>
-          <div class="card-back">Enhance decision-making, automation, and efficiency with AI-driven solutions.</div>
-        </div>
-      </div>
-    </a>
-  </div>
-</section>
-
-<script>
-  window.addEventListener('load', function() {
-    const header = document.getElementById('header'); // Select the header by ID
-    const servicesSection = document.querySelector('section.services-section'); // Select the services section
-
-    // Get the computed height of the navbar
-    const headerHeight = window.getComputedStyle(header).height;
-
-    // Set the margin-top of the services section based on the navbar height
-    servicesSection.style.marginTop = headerHeight;
-  });
-</script>
-
-
-
-
-
-<!-- ======= Key Features of Fourise Software Solutions Section ======= -->
-<section class="key-features">
-    <h1>Key Features</h1>
-    <p>Discover the top features that set Fourise Software Solutions apart in the industry.</p>
-    <div class="feature-list">
-        <div class="feature-item">
-            <h3>Innovative Web Development</h3>
-            <p>Cutting-edge websites designed for performance and user experience.</p>
-        </div>
-        <div class="feature-item">
-            <h3>Cross-Platform Mobile Applications</h3>
-            <p>Developing seamless mobile experiences across platforms.</p>
-        </div>
-        <div class="feature-item">
-            <h3>Scalable Web Applications</h3>
-            <p>Powerful and secure web apps for any business size.</p>
-        </div>
-        <div class="feature-item">
-            <h3>AI & Automation</h3>
-            <p>Streamline operations and decision-making with AI solutions.</p>
-        </div>
-    </div>
-</section>
-<!-- End Key Features Section --> 
-
-
 <!-- ======= Internship Section ======= -->
    <!-- ======= Internship Section ======= -->
 <section class="internship-section">
-    <h1>Internship</h1>
-    <p>We are the best Internship company in Ahmedabad, Pune, Mumbai providing Internship program in Java, Flutter, React JS, Php, Data Science, Data Analytics, and Software Testing.</p>
+    <h1>Career</h1>
+    <p>We are the best Software Development company in Pune,offering career opportunities in various fields including Web Development, Android Development, Full Stack Development, Java Development, Python Development, and more.</p>
 
     <!-- Internship Cards -->
+    <section>
     <div class="internship-container">
-        <!-- Web Development Internship -->
+        <!-- Web Developer Internship -->
         <div class="internship-card">
             <div class="internship-logo">
                 <img src="assets/img/internship/html-logo.png" alt="HTML Logo" />
             </div>
             <div class="internship-details">
-                <h3><a href="web-intern"> Web Development Internship</a></h3>
+                <h3>Web Developer </h3>
                 <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-duration">Experience: Fresher/Experienced</p>
                     <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Web Development Internship')">Apply Now</button>
+                    <button class="apply-btn" onclick="openModal('Web Developer Internship')">Apply Now</button>
                 </div>
             </div>
         </div>
 
-        <!-- Android Internship -->
+        <!-- Android Developer Internship -->
         <div class="internship-card">
             <div class="internship-logo">
                 <img src="assets/img/internship/android.png" alt="Android Logo" />
             </div>
             <div class="internship-details">
-                <h3><a href="android-intern.html"> Android Internship</a></h3>
+                <h3>Android Developer </h3>
                 <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-duration">Experience: Fresher/Experienced</p>
                     <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Android Internship')">Apply Now</button>
+                    <button class="apply-btn" onclick="openModal('Android Developer Internship')">Apply Now</button>
                 </div>
             </div>
         </div>
 
-        <!-- RPA Internship -->
+        <!-- Full Stack Developer Internship -->
         <div class="internship-card">
             <div class="internship-logo">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSJbqFhlIRvtoDZSbsL74OkJriIGl41GdRdhw&s" alt="RPA Logo" />
+                <img src="assets/img/internship/fullstack.png" alt="Full Stack Logo" />
             </div>
             <div class="internship-details">
-                <h3> <a href="rpa-internship.html">   RPA Internship </a></h3>
+                <h3>Full Stack Developer </h3>
                 <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-duration">Experience: Fresher/Experienced</p>
                     <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('RPA Internship')">Apply Now</button>
+                    <button class="apply-btn" onclick="openModal('Full Stack Developer Internship')">Apply Now</button>
                 </div>
             </div>
         </div>
 
-        <!-- Python Internship -->
+        <!-- Java Developer Internship -->
+        <div class="internship-card">
+            <div class="internship-logo">
+                <img src="assets/img/internship/java.png" alt="Java Logo" />
+            </div>
+            <div class="internship-details">
+                <h3>Java Developer </h3>
+                <div class="internship-info">
+                    <p class="internship-duration">Experience: Fresher/Experienced</p>
+                    <p class="internship-location">Location: Pune</p>
+                    <button class="apply-btn" onclick="openModal('Java Developer Internship')">Apply Now</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- Python Developer Internship -->
         <div class="internship-card">
             <div class="internship-logo">
                 <img src="assets/img/internship/python.png" alt="Python Logo" />
             </div>
             <div class="internship-details">
-                <h3><a href="python-internship.html"> Python Internship</a></h3>
+                <h3>Python Developer </h3>
                 <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
+                    <p class="internship-duration">Experience: Fresher/Experienced</p>
                     <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Python Internship')">Apply Now</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- SAP Internship -->
-        <div class="internship-card">
-            <div class="internship-logo">
-                <img src="assets/img/internship/sap.png" alt="SAP Logo" />
-            </div>
-            <div class="internship-details">
-                <h3><a href="sap-internship.html"> SAP Internship</a></h3>
-                <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
-                    <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('SAP Internship')">Apply Now</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Snowflake Internship -->
-        <div class="internship-card">
-            <div class="internship-logo">
-                <img src="assets/img/internship/snowflke.png" alt="Snowflake Logo" />
-            </div>
-            <div class="internship-details">
-                <h3><a href="snowflake-internship"> Snowflake Internship</a></h3>
-                <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
-                    <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Snowflake Internship')">Apply Now</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Data Science Internship -->
-        <div class="internship-card">
-            <div class="internship-logo">
-                <img src="assets/img/internship/data science.jpg" alt="Data Science Logo" />
-            </div>
-            <div class="internship-details">
-                <h3><a href="data-science-internship.html"> Data Science Internship</a></h3>
-                <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
-                    <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Data Science Internship')">Apply Now</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Data Analytics Internship -->
-        <div class="internship-card">
-            <div class="internship-logo">
-                <img src="assets/img/internship/analyics.png" alt="Analytics Logo" />
-            </div>
-            <div class="internship-details">
-                <h3><a href="data-analytics-internship.html"> Data Analytics Internship</a></h3>
-                <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
-                    <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Data Analytics Internship')">Apply Now</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Digital Marketing Internship -->
-        <div class="internship-card">
-            <div class="internship-logo">
-                <img src="assets/img/internship/digital marketing.png" alt="Digital Marketing Logo" />
-            </div>
-            <div class="internship-details">
-                <h3><a href="digital-marketing-internship.html"> Digital Marketing Internship</a></h3>
-                <div class="internship-info">
-                    <p class="internship-duration">Duration: 1/3/6 Months</p>
-                    <p class="internship-location">Location: Pune</p>
-                    <button class="apply-btn" onclick="openModal('Digital Marketing Internship')">Apply Now</button>
+                    <button class="apply-btn" onclick="openModal('Python Developer Internship')">Apply Now</button>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 <!-- Pop-Up Form -->
 <div class="popup-form" id="popupForm">
     <div class="form-container">
-        <h2>Internship Application</h2>
+        <h2>Application</h2>
         <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
             <input type="hidden" name="access_key" value="ece71aa4-a60d-4ff5-8a58-c352006ff40a">
 
@@ -555,16 +308,12 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
             <label for="technology">Technology:</label>
             <select id="technology" name="technology" required>
-                <option value="" disabled selected>Select an Internship</option>
-                <option value="Web Development Internship">Web Development Internship</option>
-                <option value="Android Internship">Android Internship</option>
-                <option value="RPA Internship">RPA Internship</option>
-                <option value="Python Internship">Python Internship</option>
-                <option value="SAP Internship">SAP Internship</option>
-                <option value="Snowflake Internship">Snowflake Internship</option>
-                <option value="Data Science Internship">Data Science Internship</option>
-                <option value="Data Analytics Internship">Data Analytics Internship</option>
-                <option value="Digital Marketing Internship">Digital Marketing Internship</option>
+                <option value="" disabled selected>Select an Option</option>
+                <option value="Web Developer Internship">Web Developer </option>
+                <option value="Android Developer Internship">Android Developer </option>
+                <option value="Full Stack Developer Internship">Full Stack Developer </option>
+                <option value="Java Developer Internship">Java Developer </option>
+                <option value="Python Developer Internship">Python Developer </option>
             </select>
 
             <div class="form-buttons">
@@ -574,6 +323,7 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
         </form>
     </div>
 </div>
+
 
 <script>
     // Open the application form with pre-selected internship
