--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -389,7 +389,7 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
 <!-- ======= Internship Section ======= -->
    <!-- ======= Internship Section ======= -->
-<section class="internship-section">
+<section class="internship-section" id="intern">
     <h1>Internship</h1>
     <p>We are the best Internship company in Ahmedabad, Pune, Mumbai providing Internship program in Java, Flutter, React JS, Php, Data Science, Data Analytics, and Software Testing.</p>
 
