--- a/internship.html
+++ b/internship.html
@@ -1,140 +1,202 @@
-   
+ <!DOCTYPE html>
+<html lang="en">
 
-    <!DOCTYPE html>
-    <html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <head>
-      <meta charset="utf-8">
-      <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <title>Fourise Software Solutions Pvt. Ltd.</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-      <title>Fourise Software Solution Pvt. Ltd.</title>
-      <meta content="" name="description">
-      <meta content="" name="keywords">
+  <!-- Favicons -->
+  <link href="assets/img/testimonials/favicon1.jpg" rel="icon">
+  <link href="assets/img/testimonials/favicon1.jpg" rel="apple-touch-icon">
 
-      <!-- Favicons -->
-      <link href="assets/img/testimonials/favicon1.jpg" rel="icon">
-      <link href="assets/img/testimonials/favicon1.jpg" rel="apple-touch-icon">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-      <!-- Google Fonts -->
-      <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
-      <!-- Vendor CSS Files -->
-      <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-      <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-      <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-      <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-      <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
-      <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-      <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <!-- Template Main CSS File -->
+  <link href="assets/css/internship.css" rel="stylesheet">
 
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+  <!-- =======================================================
+  * Template Name: Presento - v1.1.1
+  * Template URL: https://bootstrapmade.com/presento-bootstrap-corporate-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+  <style>
+  body {
+    overflow-x: hidden; /* Hides the horizontal scrollbar */
+    overflow-y: scroll; /* Keeps the vertical scroll functionality */
+    scrollbar-width: thin; /* For Firefox, to make the scrollbar thinner */
+  }
+
+  /* Optional: For Webkit browsers like Chrome/Safari */
+  ::-webkit-scrollbar {
+    width: 0px; /* Hides the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: transparent; /* Optional: Make the scrollbar thumb invisible */
+  }
+</style>
+</head>
 
 
-      <!-- Template Main CSS File -->
-      <link href="assets/css/internship.css" rel="stylesheet">
-    </head>
+<body>
 
-    <body>
+  <!-- ======= Header ======= -->
+ <!-- Header -->
+  <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
+    <div style="display: flex; justify-content: center; align-items: center;">
+        <h1 id="logoText" style=" font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
+            <a href="index.html" style="text-decoration: none; color: inherit;">
+                Fourise <span style="color: #000;">Software Solutions Pvt. Ltd.</span>
+            </a>
+        </h1>
 
-      <!-- ======= Header ======= -->
-     <!-- Header -->
-    <header id="header" style="background: #fff; box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1); position: fixed; top: 0; width: 100%; z-index: 999; padding: 15px 0;">
-        <div style="display: flex; justify-content: center; align-items: center;">
-         <h1 style="font-size: 24px; font-weight: bold; margin: 0; padding: 0; color: #e03a3c;">
-      <a href="index.html" style="text-decoration: none; color: inherit;">
-        Fourise <span style="color: #000;">Software Solutions Pvt. Ltd.</span>
-      </a>
-    </h1>
-
-          <nav style="margin-left: 50px;">
+        <nav style="margin-left: 50px;">
             <ul class="nav-menu" style="list-style: none; display: flex; margin: 0; padding: 0;">
               <li class="nav-item" style="margin: 0 20px;"><a href="index.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Home</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="about.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">About</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Services</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="career.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Career</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="internship.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Internship</a></li>
             </ul>
           </nav>
-
-    <!-- Mobile Navigation Toggle Icon -->
-    <button class="mobile-nav-toggle">
-      <i class="fa fa-bars"></i>
-    </button>
-  </div>
-
-  <!-- Mobile Navigation Menu -->
-  <div class="mobile-nav">
-    <ul>
-      <li class="nav-item"><a href="index.html">Home</a></li>
-      <li class="nav-item"><a href="about.html">About</a></li>
-      <li class="nav-item"><a href="services.html">Services</a></li>
-      <li class="nav-item"><a href="product.html">Product</a></li>
-      <li class="nav-item"><a href="contact.html">Contact</a></li>
-      <li class="nav-item"><a href="internship.html">Internship</a></li>
-    </ul>
-  </div>
-
-  <!-- Mobile Navigation Overlay -->
-  <div class="mobile-nav-overlay"></div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      const navLinks = document.querySelectorAll('.nav-item');
-      const mobileNavToggle = document.querySelector('.mobile-nav-toggle');
-      const mobileNav = document.querySelector('.mobile-nav');
-      const mobileNavOverlay = document.querySelector('.mobile-nav-overlay');
-      let isMobileNavOpen = false;
-
-      // Highlight active nav link
-      navLinks.forEach(link => {
-        link.addEventListener('click', function () {
-          navLinks.forEach(item => {
-            const anchor = item.querySelector('a');
-            anchor.style.color = '#111';
-            anchor.style.fontWeight = '500';
-          });
-
-          const activeAnchor = this.querySelector('a');
-          activeAnchor.style.color = '#e03a3c';
-          activeAnchor.style.fontWeight = 'bold';
-        });
-      });
-
-      // Retain active state based on current page
-      const currentPage = window.location.pathname.split("/").pop();
-      navLinks.forEach(link => {
-        const anchor = link.querySelector('a');
-        if (anchor.getAttribute('href') === currentPage) {
-          anchor.style.color = '#e03a3c';
-          anchor.style.fontWeight = 'bold';
-        }
-      });
-
-      // Mobile nav toggle functionality
-      mobileNavToggle.addEventListener('click', function () {
-        isMobileNavOpen = !isMobileNavOpen;
-        if (isMobileNavOpen) {
-          mobileNav.style.opacity = '1';
-          mobileNav.style.visibility = 'visible';
-          mobileNavOverlay.style.display = 'block';
-        } else {
-          mobileNav.style.opacity = '0';
-          mobileNav.style.visibility = 'hidden';
-          mobileNavOverlay.style.display = 'none';
-        }
-      });
-
-      // Close mobile nav when overlay is clicked
-      mobileNavOverlay.addEventListener('click', function () {
-        isMobileNavOpen = false;
-        mobileNav.style.opacity = '0';
-        mobileNav.style.visibility = 'hidden';
-        mobileNavOverlay.style.display = 'none';
-      });
-    });
-  </script>
+    </div>
 </header>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const navLinks = document.querySelectorAll('.nav-item');
+
+    // Function to highlight active nav link
+    function highlightActiveLink() {
+        navLinks.forEach(link => {
+            link.addEventListener('click', function () {
+                // Reset the styles for all links
+                navLinks.forEach(item => {
+                    const anchor = item.querySelector('a');
+                    anchor.style.color = "#111";  // Default color
+                    anchor.style.fontWeight = "500";  // Default font weight
+                });
+
+                // Apply styles for active link
+                const activeAnchor = this.querySelector('a');
+                activeAnchor.style.color = "#e03a3c";  // Active color
+                activeAnchor.style.fontWeight = "bold";  // Active font weight
+            });
+        });
+
+        // Retain active state based on current page (color applied directly here)
+        const currentPage = window.location.pathname.split("/").pop();
+        navLinks.forEach(link => {
+            const anchor = link.querySelector('a');
+            if (anchor.getAttribute('href') === currentPage) {
+                anchor.style.color = "#e03a3c";  // Active color
+                anchor.style.fontWeight = "bold";  // Active font weight
+            }
+        });
+    }
+
+    // Run the function to highlight active link
+    highlightActiveLink();
+
+    // Adjust logo and nav on screen resize
+    adjustLogoAndNav();
+});
+
+function adjustLogoAndNav() {
+    const logoText = document.getElementById("logoText");
+    const mobileNavToggle = document.querySelector(".mobile-nav-toggle");
+
+    if (!logoText || !mobileNavToggle) return;
+
+    const screenWidth = window.innerWidth;
+
+    // Adjust font size and margin-left based on screen width
+    let fontSize;
+    let marginLeft;
+
+    if (screenWidth <= 320) {
+        fontSize = "14px";  // Extra Small Screens
+        marginLeft = "-20px"; // Extra Small Screens margin
+    } else if (screenWidth <= 375) {
+        fontSize = "16px"; // Small Mobile Screens
+        marginLeft = "-1px"; // Small Mobile Screens margin
+    } else if (screenWidth <= 425) {
+        fontSize = "16px"; // Mobile L
+        marginLeft = "-5px"; // Mobile L margin
+    } else {
+        fontSize = "24px"; // Default for larger screens
+        marginLeft = "0px"; // Default margin for larger screens
+    }
+
+    // Log the font size and margin left values
+    console.log(`Font Size: ${fontSize}, Margin Left: ${marginLeft}`);
+
+    // Apply font size
+    if (logoText.style.fontSize !== fontSize) {
+        logoText.style.fontSize = fontSize;
+        logoText.style.textAlign = "left";
+    }
+
+    // Apply margin-left for logo text
+    if (logoText.style.marginLeft !== marginLeft) {
+        logoText.style.marginLeft = marginLeft;
+    }
+
+    // Adjust margin-top for .mobile-nav-toggle dynamically
+    let marginTop;
+    if (screenWidth <= 320) {
+        marginTop = "-30px";  // Extra Small Screens
+    } else if (screenWidth <= 375) {
+        marginTop = "-30px";  // Small Mobile Screens
+    } else if (screenWidth <= 425) {
+        marginTop = "-30px"; // Mobile L
+    } else {
+        marginTop = "0px";  // Default for larger screens
+    }
+
+    // Apply margin-top for mobile navigation toggle
+    if (mobileNavToggle.style.marginTop !== marginTop) {
+        mobileNavToggle.style.marginTop = marginTop;
+    }
+}
+
+// Apply styles immediately to prevent flickering issue
+document.addEventListener("DOMContentLoaded", function () {
+    adjustLogoAndNav();
+});
+
+// Optimize event listeners with debounce
+function debounce(func, delay) {
+    let timeout;
+    return function () {
+        clearTimeout(timeout);
+        timeout = setTimeout(func, delay);
+    };
+}
+
+window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
+
+
+
+</script>
+
+  
 
 
   
