--- a/career.html
+++ b/career.html
@@ -26,8 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/service.css" rel="stylesheet">
-  <link href="assets/css/internship.css" rel="stylesheet">
+  <link href="assets/css/career.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Presento - v1.1.1
@@ -198,14 +197,14 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 </script>
 
 
-<!-- ======= Internship Section ======= -->
+
+ <!-- ======= Internship Section ======= -->
    <!-- ======= Internship Section ======= -->
-<section class="internship-section">
+<section class="internship-section" id="intern">
     <h1>Career</h1>
     <p>We are the best Software Development company in Pune,offering career opportunities in various fields including Web Development, Android Development, Full Stack Development, Java Development, Python Development, and more.</p>
 
     <!-- Internship Cards -->
-    <section>
     <div class="internship-container">
         <!-- Web Developer Internship -->
         <div class="internship-card">
@@ -283,7 +282,6 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
         </div>
     </div>
 </section>
-
 <!-- Pop-Up Form -->
 <div class="popup-form" id="popupForm">
     <div class="form-container">
@@ -324,7 +322,6 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
     </div>
 </div>
 
-
 <script>
     // Open the application form with pre-selected internship
     function openModal(selectedInternship) {
@@ -352,29 +349,26 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
     });
 </script>
 
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
 
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
 
+          <div class="col-lg-3 col-md-6 footer-contact">
+            <h3>Fourise<span> Software Solutions Pvt. Ltd. Pune</span></h3>
+            <p>
+			  <p style="color:DodgerBlue;"><b>Office Address</b></p>
+              Office No: 1, First Floor,<br>
+              Surabhi Complex, Chandan Nagar,<br>
+              Kharadi, Pune, Maharashtra (411014) <br><br>
+              <strong>Phone:</strong> +91 9527605805<br>
+			  <strong>Email:</strong> info@fouriseindia.com<br>
+            </p>
+          </div>
 
-
-<!-- ======= Footer ======= -->
-<footer id="footer">
-
-  <div class="footer-top">
-    <div class="container">
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6 footer-contact">
-          <h3>Fourise<span>Software Solution Pvt. Ltd.</span></h3>
-          <p>
-            Office No: 1, First Floor,<br>
-            Surabhi Complex, Chandan Nagar,<br>
-            Kharadi, Pune, Maharashtra (411014)<br><br>
-            <strong>Phone:</strong> +91 9607580580<br>
-            <strong>Email:</strong> info@fouriseindia.com<br>
-          </p>
-        </div>
-
-        <div class="col-lg-2 col-md-6 footer-links">
+         <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="index.html">Home</a></li>
@@ -396,47 +390,43 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
 
           </div>
 
-        <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>About Us</h4>
-          <p style="text-align: justify; color: white;">
-            Fourrise Software Solutions Pvt. Ltd. is a leading IT company based in Pune, specializing in software development, web design, digital marketing, and mobile app development. We focus on delivering operational efficiency, productivity gains, and cost savings for our clients. With expertise across various sectors, including education and social fields, we provide innovative solutions tailored to your needs.
-          </p>
-        </div>
-
-      </div>
-
-      <!-- Combined footer bottom section -->
-      <div class="d-md-flex py-4" style="background: #000; color: #fff;">
-        <div class="mr-md-auto text-center text-md-left">
-          <div class="copyright">
-            &copy; Copyright <strong><span>Fourise</span></strong>. All Rights Reserved
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Join Us</h4>
+            <p>Get in touch with us and we will keep connection with you. Just subscribe your email</p>
+            <form action="" method="post">
+              <input type="email" name="email"><input type="submit" value="Subscribe">
+            </form>
           </div>
-          <div class="credits">
-            Designed by <a href="https://bootstrapmade.com/" style="color: #e03a3c;">Fourise Software Solutions Pvt. Ltd. Pune</a>
-          </div>
-        </div>
-        <div class="social-links text-center text-md-right pt-3 pt-md-0">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+
         </div>
       </div>
     </div>
-  </div>
 
-</footer><!-- End Footer -->
+    <div class="container d-md-flex py-4">
 
+      <div class="mr-md-auto text-center text-md-left">
+        <div class="copyright">
+          &copy; Copyright <strong><span>Fourise</span></strong>. All Rights Reserved
+        </div>
+        <div class="credits">
+          <!-- All the links in the footer should remain intact. -->
+          <!-- You can delete the links only if you purchased the pro version. -->
+          <!-- Licensing information: https://bootstrapmade.com/license/ -->
+          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/presento-bootstrap-corporate-template/ -->
+          Designed by <a href="https://bootstrapmade.com/">Fourise Software Solutions Pvt. Ltd. Pune</a>
+        </div>
+      </div>
+      <div class="social-links text-center text-md-right pt-3 pt-md-0">
+        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <a href="https://www.facebook.com/fourise.india?mibextid=ZbWKwL" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/fouriseindia" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="https://youtube.com/@rpaautobots?si=GwyI1tCLvp5hHcKO" class="youtube"><i class="bx bxl-youtube"></i></a>
+        <a href="https://www.linkedin.com/in/fourise-software-803025207" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
 
-  <!-- Back to Top Button -->
-  <a href="#" class="back-to-top" id="back-to-top"><i class="icofont-simple-up"></i></a>
-
-
-
- 
- 
-   
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
