--- a/social-media-marketing.html
+++ b/social-media-marketing.html
@@ -26,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/web.css" rel="stylesheet">
+ <link href="assets/css/web.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Presento - v1.1.1
@@ -73,7 +73,7 @@
               <li class="nav-item" style="margin: 0 20px;"><a href="career.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Career</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="product.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Product</a></li>
               <li class="nav-item" style="margin: 0 20px;"><a href="contact.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Contact</a></li>
-              <li class="nav-item" style="margin: 0 20px;"><a href="services.html#intern" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Back</a></li>
+              <li class="nav-item" style="margin: 0 20px;"><a href="services.html" style="text-decoration: none; color: #111; font-size: 16px; font-weight: 500;">Back</a></li>
             </ul>
           </nav>
     </div>
