--- a/services.html
+++ b/services.html
@@ -647,11 +647,20 @@ window.addEventListener("resize", debounce(adjustLogoAndNav, 100));
           </div>
 
         <div class="col-lg-4 col-md-6 footer-newsletter">
-          <h4>About Us</h4>
-          <p style="text-align: justify; color: white;">
-            Fourrise Software Solutions Pvt. Ltd. is a leading IT company based in Pune, specializing in software development, web design, digital marketing, and mobile app development. We focus on delivering operational efficiency, productivity gains, and cost savings for our clients. With expertise across various sectors, including education and social fields, we provide innovative solutions tailored to your needs.
-          </p>
-        </div>
+  <h4>Join Us</h4>
+  <p>Get in touch with us and we will keep connection with you. Just subscribe your email</p>
+  <form action="https://api.web3forms.com/submit" method="post" role="form" class="php-email-form">
+    <!-- Web3Forms Access Key -->
+    <input type="hidden" name="access_key" value="ece71aa4-a60d-4ff5-8a58-c352006ff40a">
+    
+    <!-- Email Input -->
+    <input type="email" name="email" required placeholder="Enter your email">
+    
+    <!-- Subscribe Button -->
+    <input type="submit" value="Subscribe">
+  </form>
+</div>
+
 
       </div>
 
